# Human-Evolution-Simulation

./: .gitignore  CMakeLists.txt  README.md  pack.sh  zip_source.sh  阶段1-已完成.md  阶段1-验收标准.md  阶段2-验收标准.md  阶段二-未开始.md
api/replay/: replay_log.h
api/snapshot/: snapshot_provider.h  world_snapshot.h
app/debug/: chinese_debug_names.h
app/headless_console/: ascii_viewer.cpp  ascii_viewer.h  detailed_logger.cpp  detailed_logger.h  main.cpp
app/tests/: architecture_test.cpp  cell_risk_test.cpp  cognitive_test.cpp  collective_avoidance_test.cpp  cultural_trace_test.cpp  determinism_test.cpp  ecology_test.cpp  engine_gauntlet_test.cpp  grid_test.cpp  group_knowledge_awareness_test.cpp  group_knowledge_test.cpp  headless_logger_test.cpp  history_test.cpp  imitation_runtime_test.cpp  internal_state_test.cpp  memory_consolidation_test.cpp  pathfinding_test.cpp  pattern_test.cpp  random_test.cpp  social_history_test.cpp  social_signal_runtime_test.cpp  social_test.cpp  test_framework.h  test_main.cpp
core/assert/: he_assert.h
core/container/: field2d.h  grid.h
core/math/: vec2f.h  vec2i.h  vec3f.h
core/random/: random.cpp  random.h
core/time/: sim_clock.h
core/types/: types.h
docs/: RUNTIME_LAW.md
rules/human_evolution/: commands.h  human_evolution_context.h  human_evolution_rule_pack.h
rules/reaction/: reaction_effect.h  reaction_rule.h  reaction_system.h  semantic_predicate.h  semantic_reaction_rule.h  semantic_reaction_system.h
sim/cognitive/: attention_numerics.h  attention_scoring_policy.h  awareness_cooldown_module.h  cognitive_module.h  concept_id.h  concept_registry.h  concept_tag.h  decision_modifier.h  focused_stimulus.h  hypothesis.h  internal_state_baseline_module.h  knowledge_graph.h  knowledge_relation.h  memory_consolidation.h  memory_inference_policy.h  memory_record.h  perceived_stimulus.h  sensory_profile.h  social_signal.h
sim/command/: command.cpp  command.h  command_buffer.cpp  command_buffer.h
sim/cultural_trace/: cultural_trace_id.h  cultural_trace_module.h  cultural_trace_record.h  cultural_trace_registry.h
sim/ecology/: affordance.h  behavior_table.h  capability.h  ecology_entity.h  ecology_registry.h  field_id.h  material_db.h  material_id.h  material_state.h  sense_emission.h
sim/entity/: agent.h  agent_action.h
sim/event/: event.h  event_bus.h  event_names.h
sim/field/: field_id.h  field_module.h  field_ref.h  scalar_field_ref.h
sim/group_knowledge/: group_knowledge_id.h  group_knowledge_module.h  group_knowledge_record.h  group_knowledge_registry.h
sim/history/: history_detection_system.h  history_event.h  history_id.h  history_module.h  history_registry.h  i_history_detector.h
sim/memory/: memory_types.h
sim/pattern/: pattern_id.h  (+8 more)
(+87 files in other folders)
